Bug 117646 - Clone Formatting not working for connector lines
Summary: Clone Formatting not working for connector lines
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords:
: 137923 (view as bug list)
Depends on:
Blocks: Clone-Formatting
  Show dependency treegraph
 
Reported: 2018-05-16 14:19 UTC by Tomáš Chvátal
Modified: 2022-08-03 13:58 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
clone-formatting.mp4 (1.04 MB, video/mp4)
2018-05-16 14:19 UTC, Tomáš Chvátal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tomáš Chvátal 2018-05-16 14:19:28 UTC
Created attachment 142132 [details]
clone-formatting.mp4

issue: on an empty slide, create two shapes: 1) a line and 2) a connector line. Try to apply the formatting from the connector line to the line. This does not work, clone formatting is not available for the connector line

expected result: clone formatting is available for connector lines.

See attached video describing the behaviour.

Reproduced on 6.0.4.2 as latest.
Comment 1 Jacques Guilleron 2018-05-17 08:54:48 UTC
Hi Tomáš,

With LO 6.0.4.2
Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
Threads CPU : 2; OS : Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: CL
I can do it by selecting the line, copying the formatting by the clone icon, then pasting it by simply selecting the connector.
Do you get it through this way?
Comment 2 Tomáš Chvátal 2018-05-17 08:58:41 UTC
I simply can't click on the "clone brush when I tried in the 6.0.4.2 (even tho the video is from old LO it behaves the same). I would expect the brush to be clickable.
Comment 3 Jacques Guilleron 2018-05-17 09:34:06 UTC
Can you precise your OS?
Comment 4 Tomáš Chvátal 2018-05-17 09:55:03 UTC
Linux, openSUSE, but applicable on generic packages too.
Comment 5 raal 2018-05-19 06:12:33 UTC
I can confirm with 4.1 and Version: 6.1.0.0.alpha1+
Build ID: 44a468323f3f011c41f892117f418987f9c98477
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 

I followed the video steps and after the click on connector, the settings (color and width) are applied to connector line. But the video is misleading - simple steps
 - insert connector line
 - click on the connector line
bug:
 - Clone formatting icon is not selectable (greyed out)

Confirming.
Comment 6 pavlog 2020-11-28 16:52:27 UTC
*** Bug 137923 has been marked as a duplicate of this bug. ***
Comment 7 Eyal Rozenberg 2020-11-28 22:48:54 UTC
Still happening with LO v7.0.3.1 ...
Comment 8 Julien Nabet 2022-07-04 20:07:27 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I gave a try with https://gerrit.libreoffice.org/c/core/+/136815.
I modified line width + color, it worked. I suppose more tests should be done but meanwhile let's consider SdrObjKind::Edge/connector line as supporting format Paintbrush until we find a blocker.
Comment 9 Commit Notification 2022-07-05 05:29:13 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b98184bf82eafd6432b269ef14d1420c4242e941

tdf#117646: Clone Formatting not working for connector lines

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2022-07-05 10:33:19 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/c03e08a67af1f6c46ad3b700f43b086bbac6a393

tdf#117646: Clone Formatting not working for connector lines

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2022-08-03 13:58:08 UTC
It's solved now.
Verified with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 5c68399e6bea3aa18477487400f8bb143d6ed84e
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded