tdf#117646: Clone Formatting not working for connector lines

Change-Id: Idf62afeae3fa32708673a6b68da2d9e0ccbd5249
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136815
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit b98184bf82eafd6432b269ef14d1420c4242e941)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136764
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>